data/derived/fa15/progs/unify/prog0482.ml.out
Characters 29-35:
  let fixpoint (f,b) = wwhile ((f, b),b);;
                               ^^^^^^
Error: This expression has type 'a * 'b
       but an expression was expected of type 'c -> 'c * bool
